// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | FormLabel As a wrapper 1`] = `
<label
  className="FormLabel__StyledLabel-skax1c-0 VHIlu"
  hidden={false}
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
  >
    Username
    <input
      type="text"
    />
  </span>
</label>
`;

exports[`Storyshots Atoms | FormLabel Default 1`] = `
Array [
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu"
    hidden={false}
    htmlFor="unique-id"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Username
    </span>
  </label>,
  <input
    id="unique-id"
    type="text"
  />,
]
`;

exports[`Storyshots Atoms | FormLabel With hidden label 1`] = `
Array [
  <label
    className="FormLabel__StyledLabel-skax1c-0 gyUewZ"
    hidden={true}
    htmlFor="unique-id-2"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Username
    </span>
  </label>,
  <input
    id="unique-id-2"
    type="text"
  />,
]
`;
